# -flowboard-analytics

./: .env.example  .env.production.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  nginx.conf  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: config.py  main.py
app/api/v1/: __init__.py  analytics.py  auth.py  tasks.py
app/core/: database.py  exceptions.py  security.py
app/models/: analytics.py  task.py  user.py
app/schemas/: analytics.py  auth.py  task.py
app/services/: analytics_service.py  auth_service.py  metrics_service.py  task_service.py
app/static/css/: style.css
app/static/js/: dashboard.js
app/templates/: about.html  base.html  dashboard.html  index.html
app/utils/: helpers.py  logger.py  validators.py
migrations/: env.py  script.py.mako
scripts/: init_db.py  seed_data.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_tasks.py
