[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow-analytics"
version = "1.0.0"
description = "Production-ready FastAPI backend for task management and analytics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "[your-name]", email = "[your-email]" }
]
keywords = ["fastapi", "analytics", "task-management", "backend", "portfolio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.3",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.6",
  "pandas>=2.2.3",
  "numpy>=2.1.3",
  "redis==5.0.1",
  "celery==5.3.4",
  "httpx==0.25.1",
  "email-validator==2.1.0",
  "python-dotenv==1.0.0",
  "psycopg2-binary>=2.9.10",
  "aiosqlite==0.19.0",
  "jinja2==3.1.2",
  "python-dateutil==2.8.2",
]

[project.urls]
Homepage = "https://[your-domain.com]"
Repository = "https://github.com/[your-username]/taskflow-analytics"
Documentation = "https://[your-domain.com]/docs"

[project.scripts]
taskflow-api = "app.main:app"

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | migrations
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "venv", "migrations", "build", "dist"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
plugins = []
exclude = "(^migrations/|^venv/|^\\.venv/)"

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
